k8s/keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: keycloak

spec:
  replicas: 1

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.2

          args:
            - start-dev

          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service

metadata:
  name: keycloak

spec:
  selector:
    app: keycloak

  ports:
    - port: 80
      targetPort: 8080
