k8s/keycloak/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: xambook
spec:
  parentRefs:
    - name: xambook-gateway
      sectionName: https
  hostnames:
    - "auth.xambook.com"
  rules:
    - matches:
        - path: {type: PathPrefix, value: /}
      backendRefs:
        - name: keycloak
          port: 8080
