k8s/keycloak/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: keycloak-route
  namespace: default

spec:
  parentRefs:
    - name: shared-gateway
      namespace: default

  hostnames:
    - auth.xambook.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: keycloak
          port: 80
